Fix checkbox alignment issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -92,6 +92,7 @@ form {
   width: 100%;
   input {
     display: block;
+    margin-left: 30px;
   } 
   span {
     display: block;
